--- a/package.json
+++ b/package.json
@@ -14,5 +14,10 @@
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
-  }
+  },
+  "description": "IronYard weekly project",
+  "main": "index.js",
+  "repository": "git@github.com:JordQuinn/portfolioStore.git",
+  "author": "Your Name <jordanmichelequinn@gmail.com>",
+  "license": "MIT"
 }
